# camm

doc/examples/: .gitignore  CMakeLists.txt  Makefile  camm_demuxing.c  camm_demuxing.cpp  camm_muxing.c  camm_muxing.cpp
doc/examples/camm/: .gitignore  CMakeLists.txt  camm_demuxing.cpp  camm_muxing.cpp
libavcodec/: avcodec.h  codec_desc.c  mpeg4videoenc.c
libavformat/: isom.c  isom.h  movenc.c
